# skrun

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-crates.yml  publish-python.yml  python.yml  release-skills.yml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs  migrate.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: command.rs  lib.rs  session.rs  snapshot.rs  task.rs  tooling.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/py/: Cargo.toml  build.rs
crates/py/src/: lib.rs
crates/run/: Cargo.toml
crates/run/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/skill/: Cargo.toml
crates/skill/src/: lib.rs
crates/skrun/: Cargo.toml
crates/skrun/src/: lib.rs  main.rs  runtime.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tool/: Cargo.toml
crates/tool/src/: lib.rs
docs/: .codocia-snapshot.json  index.md
docs/guides/: examples.md  frameworks.md  quickstart.md
examples/frameworks/: langchain_tool.py  langgraph_node.py  openai_agents_tool.py  pydantic_ai_tool.py
examples/skills/address-pr-feedback/: SKILL.md
examples/skills/cdp-browser/: Cargo.toml  SKILL.md  artifact.json  smoke.json
examples/skills/cdp-browser/schema/: input.json  output.json
examples/skills/cdp-browser/src/: main.rs
examples/skills/manage-agent/: SKILL.md
examples/skills/manage-chat-session/: SKILL.md
examples/skills/manage-subagent/: SKILL.md
examples/skills/manage-task/: SKILL.md
examples/skills/pr-context-gatherer/: SKILL.md
examples/skills/python-echo/: SKILL.md  artifact.json  pyproject.toml  skill.py
examples/skills/regex-finder/: Cargo.toml  SKILL.md  artifact.json  smoke.json
examples/skills/regex-finder/schema/: input.json  output.json
examples/skills/regex-finder/src/: main.rs
examples/skills/rust-echo/: Cargo.toml  SKILL.md  artifact.json
examples/skills/rust-echo/src/: main.rs
examples/skills/self-heal-ops/: SKILL.md
examples/skills/structured-planner/: SKILL.md
examples/skills/team/: SKILL.md
python/: README.md
python/scripts/: package.py
python/skrun/: __init__.py  agent.py  auth.py  bridge.py  chat.py  core.py  event.py  migrate.py  model.py  run.py  skill.py  store.py  tool.py
python/tests/: test_core_contract.py  test_framework_examples.py  test_package_script.py  test_skill_runtime.py
scripts/: check.sh
