[workspace]
members = [
    "crates/skrun",
    "crates/agent",
    "crates/auth",
    "crates/bridge",
    "crates/chat",
    "crates/cli",
    "crates/engine",
    "crates/event",
    "crates/model",
    "crates/proto",
    "crates/py",
    "crates/run",
    "crates/runtime",
    "crates/server",
    "crates/skill",
    "crates/store",
    "crates/tool",
]
default-members = [
    "crates/skrun",
    "crates/agent",
    "crates/auth",
    "crates/bridge",
    "crates/chat",
    "crates/cli",
    "crates/engine",
    "crates/event",
    "crates/model",
    "crates/proto",
    "crates/run",
    "crates/runtime",
    "crates/server",
    "crates/skill",
    "crates/store",
    "crates/tool",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/lhwzds/skrun"
description = "skrun executable skill runtime internals."

[workspace.dependencies]
agent = { path = "crates/agent" }
auth = { path = "crates/auth" }
bridge = { path = "crates/bridge" }
chat = { path = "crates/chat" }
cli = { path = "crates/cli" }
engine = { path = "crates/engine" }
event = { path = "crates/event" }
model = { path = "crates/model" }
proto = { path = "crates/proto" }
run = { path = "crates/run" }
runtime = { path = "crates/runtime" }
server = { path = "crates/server" }
skill = { path = "crates/skill" }
store = { path = "crates/store" }
tool = { path = "crates/tool" }
skrun = { path = "crates/skrun" }
anyhow = "1"
async-trait = "0.1"
redb = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
