[package]
name = "bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
auth.workspace = true
chat.workspace = true
engine.workspace = true
model.workspace = true
proto.workspace = true
run.workspace = true
serde.workspace = true
serde_json.workspace = true
skill.workspace = true
store.workspace = true
tool.workspace = true
