[package]
name = "proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
auth.workspace = true
chat.workspace = true
event.workspace = true
model.workspace = true
run.workspace = true
serde.workspace = true
skill.workspace = true
tool.workspace = true

[dev-dependencies]
serde_json.workspace = true
