[package]
name = "skrun-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "skrun_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-module = ["dep:pyo3"]

[dependencies]
anyhow.workspace = true
engine.workspace = true
model.workspace = true
pyo3 = { version = "0.27", optional = true, features = ["extension-module"] }
runtime.workspace = true
serde_json.workspace = true
server.workspace = true

[dev-dependencies]

[build-dependencies]
pyo3-build-config = "0.27"
