[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
engine.workspace = true
model.workspace = true
proto.workspace = true
serde_json.workspace = true
