[package]
name = "cdp-browser"
version = "0.1.3"
edition = "2024"
description = "Binary skill for controlling Chrome through the Chrome DevTools Protocol"

[workspace]

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.28"
url = "2"
